--- a/Servers/Tomcat v9.0 Server at localhost-config/web.xml
+++ b/Servers/Tomcat v9.0 Server at localhost-config/web.xml
@@ -4632,9 +4632,10 @@
 	<!-- to use within your application. -->
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/Main/Main.jsp</welcome-file>
+<!-- 		<welcome-file>index.html</welcome-file> -->
+<!-- 		<welcome-file>index.htm</welcome-file> -->
+<!-- 		<welcome-file>index.jsp</welcome-file> -->
 	</welcome-file-list>
 
 </web-app>
